# epghub

./: .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  scheduler.py
.devcontainer/: devcontainer.json  docker-compose.yaml  dockerfile
api/: app.py
api/diyp.bru/: Channel EPG.bru  bruno.json
config/: channels.yaml  epg.conf  epg.example.conf  openresty.conf
epg/: model.py  utils.py
epg/generator/: diyp.py  xmltv.py
epg/plugin/: __init__.py  __weibo_search.py  weibo_cctv9.py
epg/scraper/: __init__.py  __xmltv.py  cctv.py  cztv.py  discoverychannel_tw.py  mytvsuper.py  tvmao.py  tvsou.py  xmltv.py
functions/: diyp.js
reference/: cntv.json  tvmao.json
templates/: 404.json  index.html.jinja2
workers/: trigger.js  wrangler.toml
