[tool.poetry]
name = "epghub"
version = "0.1.0"
description = "A multi-source EPG builder with extensibility."
authors = ["Shun Li <riverscn@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.31.0"
lxml = "^5.3.1"
jinja2 = "^3.1.2"
croniter = "^2.0.1"
bs4 = "^0.0.1"
apscheduler = "^3.10.4"
apiflask = "^2.1.0"
gunicorn = "^21.2.0"
flask-compress = "^1.14"
gevent = "^23.9.1"


[tool.poetry.group.dev.dependencies]
types-lxml = "^2025.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
